--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "PosturePal - AI Posture Monitor",
-    "short_name": "PosturePal",
+    "name": "Spine Shine - AI Posture Monitor",
+    "short_name": "Spine Shine",
     "background_color": "#111827",
     "theme_color": "#ef4444",
     "display": "standalone",
